apps/jellyfin/jellyfin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
spec:
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: http
  selector:
    app: jellyfin
  type: ClusterIP
